--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "setup": "npm install && echo \"Frontend dependencies installed successfully\""
   },
   "dependencies": {
     "axios": "^1.9.0",
@@ -31,6 +32,7 @@
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
+    "terser": "^5.40.0",
     "vite": "^6.3.5"
   }
 }
